# ds-loan-housing-market-segmentation

./: .gitignore  main.py  pyproject.toml
notebooks/: 01-data-load-structure-loan-housing-andres-ethorimn-07132025.ipynb  02-eda-cleanse-imputation-loan-housing-andres-ethorimn-07132025.ipynb  03-pca-loan-housing-andres-ethorimn-07142025.ipynb  04-bi-analysis-loan-housing-andres-ethorimn-07142025.ipynb
src/features/: SklearnEstimator.py
src/utils/: dataHistVisualization.py  saveModel.py
