[project]
name = "adl-ds-semisenior-andres-ethorimn"
version = "0.1.0"
description = "Proyecto para la resolucion del caso de estudio Client Husing Analysis —prueba de ingreso cientifico de datos semisenior Core de Aval Digital Lab (ADL). Autor: Andres Ethorimn"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "feature-engine>=1.8.3",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numba",
    "pandas[excel]>=2.3.1",
    "pycaret",
    "seaborn>=0.13.2",
]
